--- a/Web/Resources/Pages/CCGMember/Compare/Delta.resx
+++ b/Web/Resources/Pages/CCGMember/Compare/Delta.resx
@@ -123,6 +123,9 @@
   <data name="Close" xml:space="preserve">
     <value>Close</value>
   </data>
+  <data name="Commanding Officer" xml:space="preserve">
+    <value>COMMANDING OFFICER</value>
+  </data>
   <data name="Current Position" xml:space="preserve">
     <value>Current Position</value>
   </data>
@@ -134,6 +137,9 @@
   </data>
   <data name="h2Results" xml:space="preserve">
     <value>Results comparing the two positions</value>
+  </data>
+  <data name="MAOtext" xml:space="preserve">
+    <value>Ship command positions differ additionally, and significantly, dependent on platform size, power, program, and length of time on a given platform.</value>
   </data>
   <data name="MATCHING COMPETENCIES" xml:space="preserve">
     <value>MATCHING COMPETENCIES</value>
