--- a/Web/Resources/Pages/CCGMember/Similar/SimilarDetails.resx
+++ b/Web/Resources/Pages/CCGMember/Similar/SimilarDetails.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Commanding Officer" xml:space="preserve">
+    <value>COMMANDING OFFICER</value>
+  </data>
   <data name="Compare" xml:space="preserve">
     <value>Compare Positions</value>
   </data>
@@ -125,6 +128,9 @@
   </data>
   <data name="Level" xml:space="preserve">
     <value>Level</value>
+  </data>
+  <data name="MAOtext" xml:space="preserve">
+    <value>Ship command positions differ additionally, and significantly, dependent on platform size, power, program, and length of time on a given platform.</value>
   </data>
   <data name="POSITION DETAILS" xml:space="preserve">
     <value>POSITION DETAILS</value>
