--- a/Web/Resources/Pages/Candidate/Seagoing/Common/Details.resx
+++ b/Web/Resources/Pages/Candidate/Seagoing/Common/Details.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Commanding Officer" xml:space="preserve">
+    <value>COMMANDING OFFICER</value>
+  </data>
+  <data name="MAOtext" xml:space="preserve">
+    <value>Ship command positions differ additionally, and significantly, dependent on platform size, power, program, and length of time on a given platform.</value>
+  </data>
   <data name="print" xml:space="preserve">
     <value>Print PDF</value>
   </data>
