--- a/Web/Resources/Pages/CCGMember/Compare/Delta.fr.resx
+++ b/Web/Resources/Pages/CCGMember/Compare/Delta.fr.resx
@@ -120,6 +120,18 @@
   <data name="Added" xml:space="preserve">
     <value>Ajouté</value>
   </data>
+  <data name="Administrative" xml:space="preserve">
+    <value>Administratif</value>
+  </data>
+  <data name="Business" xml:space="preserve">
+    <value>Affaires</value>
+  </data>
+  <data name="Candidate" xml:space="preserve">
+    <value>Candidat externe</value>
+  </data>
+  <data name="Categories" xml:space="preserve">
+    <value>Catégories</value>
+  </data>
   <data name="CERTIFICATIONS" xml:space="preserve">
     <value>ATTESTATIONS</value>
   </data>
@@ -129,26 +141,77 @@
   <data name="Commanding Officer" xml:space="preserve">
     <value>COMMANDANT</value>
   </data>
+  <data name="Compare" xml:space="preserve">
+    <value>Comparer</value>
+  </data>
+  <data name="Computer Sciences" xml:space="preserve">
+    <value>Sciences informatiques</value>
+  </data>
+  <data name="Computer Systems" xml:space="preserve">
+    <value>Ordinateurs</value>
+  </data>
+  <data name="Cook" xml:space="preserve">
+    <value>Cuisinier</value>
+  </data>
+  <data name="Crew" xml:space="preserve">
+    <value>Équipage</value>
+  </data>
   <data name="Current Position" xml:space="preserve">
     <value>Position actuelle</value>
   </data>
   <data name="Current Position Level" xml:space="preserve">
     <value>Niveau de poste actuel</value>
   </data>
+  <data name="Deck" xml:space="preserve">
+    <value>Pont</value>
+  </data>
+  <data name="DIFFERING CERTIFICATIONS" xml:space="preserve">
+    <value>ATTESTATIONS DIFFÉRENTES</value>
+  </data>
   <data name="DIFFERING COMPETENCIES" xml:space="preserve">
     <value>COMPÉTENCES DIFFÉRENTES</value>
+  </data>
+  <data name="DIFFERING REGIONS" xml:space="preserve">
+    <value>RÉGIONS DIFFÉRENTES</value>
+  </data>
+  <data name="Electrical" xml:space="preserve">
+    <value>Électrique</value>
+  </data>
+  <data name="Electronics" xml:space="preserve">
+    <value>Électronique</value>
+  </data>
+  <data name="Engineering" xml:space="preserve">
+    <value>Ingénierie</value>
+  </data>
+  <data name="General Arts" xml:space="preserve">
+    <value>Arts généraux</value>
+  </data>
+  <data name="geo" xml:space="preserve">
+    <value>Information géographique</value>
   </data>
   <data name="h2Results" xml:space="preserve">
     <value>Résultats comparant les deux positions</value>
   </data>
+  <data name="HighSchool" xml:space="preserve">
+    <value>École secondaire</value>
+  </data>
   <data name="Home" xml:space="preserve">
-    <value>Page d'accueil</value>
+    <value>Accueil</value>
+  </data>
+  <data name="Logistics" xml:space="preserve">
+    <value>Logistique</value>
   </data>
   <data name="MAOtext" xml:space="preserve">
     <value>Les positions de commandement des navires diffèrent en outre et de manière significative, en fonction de la taille de la plate-forme, de la puissance, du programme et de la durée sur une plate-forme donnée.</value>
   </data>
+  <data name="MATCHING CERTIFICATIONS" xml:space="preserve">
+    <value>ATTESTATIONS ASSOCIÉES</value>
+  </data>
   <data name="MATCHING COMPETENCIES" xml:space="preserve">
     <value>COMPÉTENCES ASSOCIÉES</value>
+  </data>
+  <data name="MATCHING REGIONS" xml:space="preserve">
+    <value>RÉGIONS ASSOCIÉES</value>
   </data>
   <data name="NoDiff" xml:space="preserve">
     <value>Pas de compétences différentes</value>
@@ -180,8 +243,14 @@
   <data name="NoMatchingType3" xml:space="preserve">
     <value>Aucun élément comportemental associées</value>
   </data>
+  <data name="Officer" xml:space="preserve">
+    <value>Officier</value>
+  </data>
   <data name="Position Level" xml:space="preserve">
     <value>Niveau du poste</value>
+  </data>
+  <data name="Position List" xml:space="preserve">
+    <value>Liste des postes</value>
   </data>
   <data name="Previous" xml:space="preserve">
     <value>Précédent</value>
@@ -189,10 +258,40 @@
   <data name="Save PDF" xml:space="preserve">
     <value>Enregistrer le PDF</value>
   </data>
+  <data name="Sciences" xml:space="preserve">
+    <value>Les sciences</value>
+  </data>
+  <data name="Seagoing" xml:space="preserve">
+    <value>Positions en mer</value>
+  </data>
+  <data name="Search Type" xml:space="preserve">
+    <value>Type de recherche</value>
+  </data>
+  <data name="Select" xml:space="preserve">
+    <value>Sélectionnez</value>
+  </data>
   <data name="Selected Position" xml:space="preserve">
     <value>Position sélectionnée</value>
   </data>
   <data name="Selected Position Level" xml:space="preserve">
     <value>Niveau de position sélectionné</value>
+  </data>
+  <data name="Shoreside" xml:space="preserve">
+    <value>Positions côté rivage</value>
+  </data>
+  <data name="Similar Positions" xml:space="preserve">
+    <value>Postes similaires</value>
+  </data>
+  <data name="Social Sciences" xml:space="preserve">
+    <value>Science sociale</value>
+  </data>
+  <data name="Student" xml:space="preserve">
+    <value>Étudiant</value>
+  </data>
+  <data name="TechCollege" xml:space="preserve">
+    <value>Collège technique</value>
+  </data>
+  <data name="University" xml:space="preserve">
+    <value>Université</value>
   </data>
 </root>
