--- a/Web/Resources/Pages/Candidate/Seagoing/Common/Details.fr.resx
+++ b/Web/Resources/Pages/Candidate/Seagoing/Common/Details.fr.resx
@@ -129,6 +129,9 @@
   <data name="Compare" xml:space="preserve">
     <value>Comparer</value>
   </data>
+  <data name="DESCRIPTION" xml:space="preserve">
+    <value>DESCRIPTIF</value>
+  </data>
   <data name="DIFFERING COMPETENCIES" xml:space="preserve">
     <value>COMPÉTENCES DIFFÉRENTES</value>
   </data>
@@ -143,6 +146,12 @@
   </data>
   <data name="Next" xml:space="preserve">
     <value>Suivant</value>
+  </data>
+  <data name="NoPositions" xml:space="preserve">
+    <value>Aucun poste similaire n'est actuellement disponible pour ce poste.</value>
+  </data>
+  <data name="noregions" xml:space="preserve">
+    <value>Aucune région disponible</value>
   </data>
   <data name="POSITION DETAILS" xml:space="preserve">
     <value>DÉTAILS DU POSTE</value>
@@ -161,6 +170,9 @@
   </data>
   <data name="Question2" xml:space="preserve">
     <value>En fonction des compétences de votre profil actuel, quel pourcentage de correspondance recherchez-vous?</value>
+  </data>
+  <data name="REGIONS" xml:space="preserve">
+    <value>RÉGIONS</value>
   </data>
   <data name="SAME CERTIFICATION" xml:space="preserve">
     <value>MÊME ATTESTATION</value>
