--- a/Web/Resources/Pages/Candidate/Shoreside/SimilarList.resx
+++ b/Web/Resources/Pages/Candidate/Shoreside/SimilarList.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="NoPositions" xml:space="preserve">
+    <value>No similar positions are currently available for this position.</value>
+  </data>
   <data name="save" xml:space="preserve">
     <value>Save or print this document</value>
   </data>
