--- a/Web/Resources/Pages/CCGMember/CurrentPosition.fr.resx
+++ b/Web/Resources/Pages/CCGMember/CurrentPosition.fr.resx
@@ -136,7 +136,7 @@
     <value>Photo de diverses carrières au sein de la Garde côtière canadienne</value>
   </data>
   <data name="Position" xml:space="preserve">
-    <value>Position</value>
+    <value>Poste</value>
   </data>
   <data name="Previous" xml:space="preserve">
     <value>Précédent</value>
