--- a/Web/Resources/Pages/CCGMember/Similar/SimilarList.fr.resx
+++ b/Web/Resources/Pages/CCGMember/Similar/SimilarList.fr.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Administrative" xml:space="preserve">
+    <value>Administratif</value>
+  </data>
   <data name="Business" xml:space="preserve">
     <value>Affaires</value>
   </data>
@@ -139,10 +142,13 @@
     <value>Équipage</value>
   </data>
   <data name="Current Position" xml:space="preserve">
-    <value>Position actuelle</value>
+    <value>Poste actuelle</value>
   </data>
   <data name="Deck" xml:space="preserve">
     <value>Pont</value>
+  </data>
+  <data name="Electrical" xml:space="preserve">
+    <value>Électrique</value>
   </data>
   <data name="Electronics" xml:space="preserve">
     <value>Électronique</value>
@@ -184,7 +190,7 @@
     <value>Niveau du poste</value>
   </data>
   <data name="Position List" xml:space="preserve">
-    <value>Liste des postes</value>
+    <value>Liste de postes</value>
   </data>
   <data name="POSITIONS" xml:space="preserve">
     <value>POSTES</value>
@@ -223,7 +229,7 @@
     <value>Postes similaires</value>
   </data>
   <data name="SIMILAR POSITIONS" xml:space="preserve">
-    <value>POSITIONS SIMILAIRES</value>
+    <value>POSTES SIMILAIRES</value>
   </data>
   <data name="Similar Search" xml:space="preserve">
     <value>Recherche similaire</value>
@@ -236,6 +242,9 @@
   </data>
   <data name="TechCollege" xml:space="preserve">
     <value>Collège technique</value>
+  </data>
+  <data name="Trades" xml:space="preserve">
+    <value>Métiers généraux</value>
   </data>
   <data name="University" xml:space="preserve">
     <value>Université</value>
