--- a/Web/Resources/Pages/Student/University/Seagoing/Index.fr.resx
+++ b/Web/Resources/Pages/Student/University/Seagoing/Index.fr.resx
@@ -121,7 +121,7 @@
     <value>Collège de la Garde côtière canadienne</value>
   </data>
   <data name="Crew" xml:space="preserve">
-    <value>Équipage des navires</value>
+    <value>Équipage</value>
   </data>
   <data name="Home" xml:space="preserve">
     <value>Accueil</value>
