--- a/Web/Resources/Pages/CCGMember/Similar/SimilarSearch.fr.resx
+++ b/Web/Resources/Pages/CCGMember/Similar/SimilarSearch.fr.resx
@@ -138,29 +138,14 @@
   <data name="Close" xml:space="preserve">
     <value>Fermer</value>
   </data>
-  <data name="Computer Sciences" xml:space="preserve">
-    <value>Sciences informatiques</value>
-  </data>
-  <data name="Computer Systems" xml:space="preserve">
-    <value>Ordinateurs</value>
-  </data>
-  <data name="Cook" xml:space="preserve">
-    <value>Cuisinier</value>
-  </data>
-  <data name="Crew" xml:space="preserve">
-    <value>Équipage</value>
-  </data>
   <data name="CURRENT LEVEL" xml:space="preserve">
     <value>NIVEAU ACTUEL</value>
   </data>
   <data name="Current Position" xml:space="preserve">
-    <value>Position actuelle</value>
+    <value>Poste actuelle</value>
   </data>
   <data name="Current Position Level" xml:space="preserve">
     <value>Niveau de poste actuel</value>
-  </data>
-  <data name="Deck" xml:space="preserve">
-    <value>Pont</value>
   </data>
   <data name="Delete" xml:space="preserve">
     <value>Supprimer</value>
@@ -168,17 +153,8 @@
   <data name="Edit" xml:space="preserve">
     <value>Éditer</value>
   </data>
-  <data name="Electronics" xml:space="preserve">
-    <value>Électronique</value>
-  </data>
-  <data name="Engineering" xml:space="preserve">
-    <value>Ingénierie</value>
-  </data>
   <data name="General Arts" xml:space="preserve">
     <value>Arts généraux</value>
-  </data>
-  <data name="geo" xml:space="preserve">
-    <value>Information géographique</value>
   </data>
   <data name="h1Text" xml:space="preserve">
     <value>Recherche de position similaire</value>
@@ -192,17 +168,20 @@
   <data name="HIGHER LEVEL" xml:space="preserve">
     <value>NIVEAU SUPÉRIEUR</value>
   </data>
-  <data name="HighSchool" xml:space="preserve">
-    <value>École secondaire</value>
-  </data>
   <data name="Home" xml:space="preserve">
     <value>Accueil</value>
+  </data>
+  <data name="LEVEL" xml:space="preserve">
+    <value>NIVEAU</value>
   </data>
   <data name="LimitReached" xml:space="preserve">
     <value>La limite a été atteinte.</value>
   </data>
   <data name="Logistics" xml:space="preserve">
     <value>Logistique</value>
+  </data>
+  <data name="More Details" xml:space="preserve">
+    <value>Plus de détails</value>
   </data>
   <data name="Next" xml:space="preserve">
     <value>Suivant</value>
@@ -219,11 +198,17 @@
   <data name="pageSubmitted" xml:space="preserve">
     <value>En fonction de la proximité de votre position actuelle que vous souhaitez explorer, veuillez sélectionner un pourcentage de correspondance.</value>
   </data>
+  <data name="POSITION" xml:space="preserve">
+    <value>POSTE</value>
+  </data>
   <data name="Position Level" xml:space="preserve">
     <value>Niveau du poste</value>
   </data>
   <data name="Position List" xml:space="preserve">
     <value>Liste des postes</value>
+  </data>
+  <data name="POSITIONS" xml:space="preserve">
+    <value>POSTES</value>
   </data>
   <data name="Previous" xml:space="preserve">
     <value>Précédent</value>
@@ -242,12 +227,6 @@
   </data>
   <data name="Save PDF" xml:space="preserve">
     <value>Enregistrer le PDF</value>
-  </data>
-  <data name="Sciences" xml:space="preserve">
-    <value>Les sciences</value>
-  </data>
-  <data name="Seagoing" xml:space="preserve">
-    <value>Positions en mer</value>
   </data>
   <data name="Search Positions" xml:space="preserve">
     <value>Rechercher des postes</value>
@@ -270,28 +249,13 @@
   <data name="SelectionTitleCertificates" xml:space="preserve">
     <value>Sélectionnez un ou plusieurs certificats, le cas échéant, pour affiner votre recherche de postes similaires à votre poste actuel.</value>
   </data>
-  <data name="Shoreside" xml:space="preserve">
-    <value>Positions côté rivage</value>
-  </data>
-  <data name="Similar Positions" xml:space="preserve">
-    <value>Postes similaires</value>
+  <data name="SIMILAR POSITIONS" xml:space="preserve">
+    <value>POSTES SIMILAIRES</value>
   </data>
   <data name="Similar Search" xml:space="preserve">
     <value>Recherche similaire</value>
   </data>
-  <data name="Social Sciences" xml:space="preserve">
-    <value>Science sociale</value>
-  </data>
-  <data name="Student" xml:space="preserve">
-    <value>Étudiant</value>
-  </data>
   <data name="Submit" xml:space="preserve">
     <value>Soumettre</value>
-  </data>
-  <data name="TechCollege" xml:space="preserve">
-    <value>Collège technique</value>
-  </data>
-  <data name="University" xml:space="preserve">
-    <value>Université</value>
   </data>
 </root>
