--- a/Web/Resources/Pages/Student/College/Seagoing/Crew/Index.fr.resx
+++ b/Web/Resources/Pages/Student/College/Seagoing/Crew/Index.fr.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Crew" xml:space="preserve">
-    <value>Équipage des navires</value>
+    <value>Équipage</value>
   </data>
   <data name="Deck" xml:space="preserve">
     <value>Pont</value>
