--- a/Web/Resources/Pages/Student/College/Seagoing/Crew/Logistics.fr.resx
+++ b/Web/Resources/Pages/Student/College/Seagoing/Crew/Logistics.fr.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Crew" xml:space="preserve">
-    <value>Équipage des navires</value>
+    <value>Équipage </value>
   </data>
   <data name="Home" xml:space="preserve">
     <value>Accueil</value>
@@ -136,7 +136,7 @@
     <value>Aucune position en mer disponible</value>
   </data>
   <data name="position" xml:space="preserve">
-    <value>POSTES</value>
+    <value>POSTE</value>
   </data>
   <data name="Previous" xml:space="preserve">
     <value>Précédent</value>
