--- a/Web/Resources/Pages/Student/College/Seagoing/Officer/Engineering.resx
+++ b/Web/Resources/Pages/Student/College/Seagoing/Officer/Engineering.resx
@@ -130,7 +130,7 @@
     <value>Ships' Officer</value>
   </data>
   <data name="position" xml:space="preserve">
-    <value>POSITIONS</value>
+    <value>POSITION</value>
   </data>
   <data name="Previous" xml:space="preserve">
     <value>Previous</value>
