--- a/Web/Resources/Pages/Student/College/Shoreside/Electronics.fr.resx
+++ b/Web/Resources/Pages/Student/College/Shoreside/Electronics.fr.resx
@@ -139,7 +139,7 @@
     <value>Programme d'apprentissage de perfectionnement professionnel (PDAP)</value>
   </data>
   <data name="position" xml:space="preserve">
-    <value>POSTES</value>
+    <value>POSTE</value>
   </data>
   <data name="Previous" xml:space="preserve">
     <value>Précédent</value>
