--- a/Web/Resources/Pages/Student/College/Shoreside/Electronics.resx
+++ b/Web/Resources/Pages/Student/College/Shoreside/Electronics.resx
@@ -133,7 +133,7 @@
     <value>Professional Development Apprenticeship Program (PDAP)</value>
   </data>
   <data name="position" xml:space="preserve">
-    <value>POSITIONS</value>
+    <value>POSITION</value>
   </data>
   <data name="Previous" xml:space="preserve">
     <value>Previous</value>
