--- a/Web/Resources/Pages/Student/HighSchool/Seagoing/SeagoingEngineer.fr.resx
+++ b/Web/Resources/Pages/Student/HighSchool/Seagoing/SeagoingEngineer.fr.resx
@@ -136,7 +136,7 @@
     <value>Aucune position en mer disponible</value>
   </data>
   <data name="position" xml:space="preserve">
-    <value>POSTES</value>
+    <value>POSTE</value>
   </data>
   <data name="Previous" xml:space="preserve">
     <value>Précédent</value>
