--- a/Web/Resources/Pages/Student/HighSchool/Seagoing/SeagoingEngineer.resx
+++ b/Web/Resources/Pages/Student/HighSchool/Seagoing/SeagoingEngineer.resx
@@ -127,7 +127,7 @@
     <value>No seagoing positions available</value>
   </data>
   <data name="position" xml:space="preserve">
-    <value>POSITIONS</value>
+    <value>POSITION</value>
   </data>
   <data name="Previous" xml:space="preserve">
     <value>Previous</value>
