--- a/Web/Resources/Pages/Student/University/Seagoing/Index.resx
+++ b/Web/Resources/Pages/Student/University/Seagoing/Index.resx
@@ -121,7 +121,7 @@
     <value>Canadian Coast Guard College</value>
   </data>
   <data name="Crew" xml:space="preserve">
-    <value>Ships' Crew</value>
+    <value>Crew</value>
   </data>
   <data name="link" xml:space="preserve">
     <value>https://www.ccg-gcc.gc.ca/college/index-eng.html</value>
