--- a/Web/Resources/Pages/Student/University/Seagoing/Officer/Index.fr.resx
+++ b/Web/Resources/Pages/Student/University/Seagoing/Officer/Index.fr.resx
@@ -130,7 +130,7 @@
     <value>Logistique</value>
   </data>
   <data name="Officer" xml:space="preserve">
-    <value>Officiers de navire</value>
+    <value>Officier</value>
   </data>
   <data name="PhotoDeck" xml:space="preserve">
     <value>Photo d'un officier de navigation de la Garde côtière canadienne</value>
