--- a/Web/Resources/Pages/Student/University/Seagoing/Officer/Index.resx
+++ b/Web/Resources/Pages/Student/University/Seagoing/Officer/Index.resx
@@ -127,7 +127,7 @@
     <value>Logistics</value>
   </data>
   <data name="Officer" xml:space="preserve">
-    <value>Ships' Officer</value>
+    <value>Officer</value>
   </data>
   <data name="PhotoDeck" xml:space="preserve">
     <value>Photo of a Canadian Coast Guard navigation officer</value>
