--- a/Web/Resources/Pages/Student/University/Shoreside/Engineering.fr.resx
+++ b/Web/Resources/Pages/Student/University/Shoreside/Engineering.fr.resx
@@ -133,7 +133,7 @@
     <value>Aucune position côté rivage disponible</value>
   </data>
   <data name="position" xml:space="preserve">
-    <value>POSTES</value>
+    <value>POSTE</value>
   </data>
   <data name="Previous" xml:space="preserve">
     <value>Précédent</value>
